feat: add two sections: header and hero

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -17,3 +17,12 @@
     font-style: normal;
     display: swap;
 }
+
+@font-face {
+    font-family: 'Roboto Bold';
+    src: 
+    url('../fonts/Roboto/Roboto-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    display: swap;
+    }
