--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -16,8 +16,9 @@
         font-weight: 700
         line-height: 28.8px
         margin-left: 0.857rem
-        
         font-family: 'Roboto Bold'
+        text-decoration: none
+        color: #0f1c2e
 .nav
     margin-left: -3.5rem
     &__item
