--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -25,4 +25,22 @@
     font-weight: normal;
     font-style: normal;
     display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto Thin';
+    src:
+    url('../fonts/Roboto/Roboto-Thin.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto Light';
+    src: 
+    url('../fonts/Roboto/Roboto-Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    display: swap;
     }
