--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -52,7 +52,47 @@
         font-weight: 300
         line-height: 28.76px
         margin-left: 3.6rem
+    &__why
+        font-family: "Myriad Pro Regular"
+        font-size: 39.5px
+        font-weight: 400
+        width: 294px
+        height: 72px
+        background-color: #ffffff
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-bottom: 11.9rem
+        margin-top: -19rem
+    &__reasons
+        display: flex
+        align-items: flex-end
+        margin: 0
+        padding: 0
+        // align-items: flex-start
+    &__95
+        font-size: 342px
+        font-weight: 400
+        font-family: 'Roboto Thin'
+        margin-left: -1rem
+        padding: 0
+        max-height: 249px
+        letter-spacing: -17.1px    
+        line-height: 80.91px
+        color: #0f1c2e
+    &__percent
+        font-weight: 400
+        font-size: 112px
+        font-family: 'Roboto Thin'
+        color: #06bee1
+        margin: 0
+        padding: 0
+        margin-left: 2.15rem
+        margin-right: 12rem
+        
 .thirty-days
     text-decoration: none
     color: #06bee1
 
+.search-photo
+    margin-right: 13.9rem
