feat: add almost all sections

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,4 +7,19 @@
 @import 'templates/header'
 @import 'templates/hero'
 @import 'templates/reason'
+@import 'templates/create-own'
+@import 'templates/start-studying'
+@import 'templates/benefits'
+@import 'templates/easy'
+@import 'templates/format'
+@import 'templates/process'
+@import 'templates/lesson'
+@import 'templates/advantages'
+@import 'templates/price'
+@import 'templates/sform'
+@import 'templates/reviews'
+@import 'templates/results'
+@import 'templates/return'
+@import 'templates/questions'
+
 
