--- a/sass/templates/_sform.sass
+++ b/sass/templates/_sform.sass
@@ -1,61 +1,58 @@
-.question
-    background: url('../img/quest-bg.jpg') no-repeat center
+.sform
     padding-top: 8.5rem
-    padding-bottom: 7.8rem
-    &__container
-        width: 72.5%
+    background: url('../img/sform-bg.jpg') no-repeat center
+    padding-bottom: 8.5rem
     &__h2
+        text-align: center
         color: #ffffff
         font-size: 24px
         font-weight: 700
-        text-align: center
     &__text
         color: #ffffff
         font-size: 16px
         font-weight: 300
         line-height: 24px
         text-align: center
-        margin-top: 2rem
-        margin-bottom: 2rem
+        margin-bottom: 3rem
+        background: none
     &__form
         display: flex
-        flex-wrap: wrap
-        justify-content: space-between
+        flex-direction: column
+        max-width: 359px
+        margin: auto
     &__name
         border-radius: 4px
         background-color: #ffffff
-        padding: 1.1rem 1rem
-        margin-right: 1rem
-        width: 18.785rem
+        padding: 1.1rem 0
+        margin-bottom: 1.5rem
         &::placeholder
             color: #0f1c2e
             font-size: 19px
             font-weight: 300
             line-height: 22.94px
+            padding-left: 1rem
     &__number
         border-radius: 4px
         background-color: #ffffff
-        padding: 1.1rem 1rem
-        margin-right: 0.8rem
-        width: 18.785rem
+        padding: 1.1rem 0
+        margin-bottom: 1.5rem
         &::placeholder
             color: #0f1c2e
             font-size: 19px
             font-weight: 300
             line-height: 22.94px
-            
+            padding-left: 1rem
     &__email
         border-radius: 4px
         background-color: #ffffff
-        padding: 1.1rem 1rem
-        margin-right: 1rem
-        width: 18.785rem
+        padding: 1.1rem 0
+        margin-bottom: 1.5rem
         &::placeholder
             color: #0f1c2e
             font-size: 19px
             font-weight: 300
             line-height: 22.94px
-            margin-left: 0rem
+            padding-left: 1rem
     &__button
         box-shadow: 0 12px 24px rgba(6, 57, 158, 0.32)
         border-radius: 4px
@@ -64,4 +61,8 @@
         font-size: 17px
         font-weight: 700
         text-transform: uppercase
-        padding: 0.1rem 3rem
+        padding: 1rem 0
+input
+    outline: none
+            
+    
