--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -67,6 +67,7 @@
     &__reasons
         display: flex
         align-items: flex-end
+        flex-wrap: wrap
         margin: 0
         padding: 0
         // align-items: flex-start
