--- a/css/style.css
+++ b/css/style.css
@@ -1477,3 +1477,72 @@ input {
     font-weight: 700;
     text-transform: uppercase;
     padding: 0.1rem 3rem; }
+
+.footer {
+  padding-top: 8rem;
+  padding-bottom: 7.5rem; }
+  .footer__container {
+    width: 72.5%; }
+  .footer__h3 {
+    color: #0f1c2e;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 28.8px;
+    margin: 0;
+    margin-bottom: 1.6rem; }
+  .footer__email {
+    width: 18.785rem;
+    padding: 1rem 1.1rem;
+    outline: none;
+    background: url("../img/email.svg") no-repeat;
+    background-position: 16.15rem;
+    border: 1px solid #cfdeee; }
+    .footer__email::-moz-placeholder {
+      color: #777777;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px; }
+    .footer__email:-ms-input-placeholder {
+      color: #777777;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px; }
+    .footer__email::-ms-input-placeholder {
+      color: #777777;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px; }
+    .footer__email::placeholder {
+      color: #777777;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px; }
+  .footer__text {
+    font-family: "Myriad Pro Regular";
+    font-size: 16px;
+    font-weight: 400;
+    color: #000000;
+    line-height: 1.7rem; }
+  .footer__text2 {
+    color: #777777;
+    font-family: "Myriad Pro Regular";
+    font-size: 16.8px;
+    font-weight: 400;
+    line-height: 2rem; }
+  .footer__text3 {
+    margin-right: -2.5rem;
+    margin-left: 3rem; }
+  .footer__socials {
+    display: flex;
+    margin-top: 1.2rem; }
+  .footer__b-social {
+    border-radius: 20px;
+    border: 1px solid #0842b7;
+    background-color: #e4edf5;
+    width: 2.785rem;
+    height: 2.785rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1.25rem; }
