feat: start duing adaptive

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -6,3 +6,20 @@
     outline: none
     &:hover
         cursor: pointer
+.invalid
+    color: red
+    border-bottom: 1px solid red
+    margin-top: -0.7rem
+    margin-bottom: 1.3rem
+.invalidd
+    font-size: 13px
+    max-width: 263px
+    color: red
+    border-bottom: 1px solid red
+    margin-top: 0.4rem
+.invaliddd
+    font-size: 13px
+    color: red
+    border-bottom: 1px solid red
+    margin-top: 0.6rem
+    margin-bottom: 0
