--- a/sass/templates/_benefits.sass
+++ b/sass/templates/_benefits.sass
@@ -7,9 +7,9 @@
     &__h2
         text-align: center
         color: #0f1c2e
-        font-size: 36px
+        font-size: 2.571rem
         font-weight: 100
-        line-height: 42px
+        line-height: 3rem
         margin-bottom: 21.14rem
     &__h2-bold
         font-weight: 700
@@ -24,12 +24,12 @@
     &__text
         color: #000000
         font-family: "Myriad Pro Regular"
-        font-size: 17px
+        font-size: 1.21rem
         line-height: 1.7rem
         font-weight: 400
         padding-bottom: 9.285rem
 .swiper
-    max-width: 721px
+    max-width: 51.5rem
     &-slide
         
         &__container
@@ -40,8 +40,8 @@
         &-prev, &-next
             align-items: center
             background-size: 52px
-            width: 90px
-            height: 16px
+            width: 6.42rem
+            height: 1.14rem
             &::after
                 display: none
         &-prev
