--- a/sass/templates/_create-own.sass
+++ b/sass/templates/_create-own.sass
@@ -7,17 +7,17 @@
         margin-bottom: 2.2rem
     &__h2
         color: #0f1c2e
-        font-size: 35.5px
+        font-size: 2.535rem
         font-weight: 300
-        line-height: 42px
+        line-height: 3rem
         margin: 0
         margin-bottom: 1.7rem
         padding: 0
     &__title-text
         color: #0f1c2e
-        font-size: 15.7px
+        font-size: 1.07rem
         font-weight: 300
-        line-height: 24px
+        line-height: 1.71rem
         margin: 0
         padding: 0
     &__col
@@ -38,17 +38,17 @@
         align-items: center
     &__how-much
         color: #0f1c2e
-        font-size: 24px
-        line-height: 28.8px
+        font-size: 1.71rem
+        line-height: 2.057rem
         margin-bottom: 2.3rem
     &__much
         font-weight: 700
         font-family: 'Roboto Bold'
     &__enter
         color: #0f1c2e
-        font-size: 15.7px
+        font-size: 1.07rem
         font-weight: 300
-        line-height: 24px
+        line-height: 1.71rem
     &__make-money
         width: 7rem
         height: 3.5rem
@@ -56,7 +56,7 @@
         margin-right: 2.2rem
         border: 1px solid #cfdeee
         &::placeholder
-            font-size: 18px
+            font-size: 1.285rem
             font-weight: 700
             color: #000000
             padding-left: 1.15rem
@@ -65,7 +65,7 @@
         border-radius: 4px
         background-color: #0842b7
         color: #ffffff
-        font-size: 17px
+        font-size: 1.28rem
         font-weight: 700
         text-transform: uppercase
         padding: 1rem 2rem
