--- a/sass/templates/_easy.sass
+++ b/sass/templates/_easy.sass
@@ -6,50 +6,50 @@
         padding-bottom: 8.571rem
     &__h2
         color: #0f1c2e
-        font-size: 35.5px
+        font-size: 2.535rem
         font-weight: 300
-        line-height: 43.2px
+        line-height: 3.085rem
         margin-bottom: 0
     &__bold
         font-weight: 700    
     &__text
         color: #061826
-        font-size: 15.6px
+        font-size: 1.11rem
         font-weight: 300
-        line-height: 24px
+        line-height: 1.71rem
         margin-top: 1.6rem
         margin-bottom: 6.55rem
     &__item
         color: #0f1c2e
-        font-size: 24px
+        font-size: 1.71rem
         font-weight: 300
-        line-height: 28.8px
+        line-height: 2.057rem
         margin-bottom: 6.5rem
         display: block
     &__video
-        background: url('../img/videobg.jpg')
-        max-width: 945px
-        height: 387px
+        background: url('../img/videobg.jpg') no-repeat center
+        max-width: 67.5rem
+        height: 27.64rem
         display: flex
         margin: auto
         cursor: pointer
     &__h3
         color: #0f1c2e
-        font-size: 24.2px
+        font-size: 1.712rem
         font-weight: 700
-        line-height: 28.8px
+        line-height: 2.057rem
         margin-top: 5rem
     &__text2
         color: #061826
-        font-size: 15.7px
+        font-size: 1.12rem
         font-weight: 300
-        line-height: 24px
+        line-height: 1.71rem
     &__button
         box-shadow: 0 12px 24px rgba(6, 57, 158, 0.32)
         border-radius: 4px
         background-color: #0842b7
         color: #ffffff
-        font-size: 17px
+        font-size: 1.214rem
         font-weight: 700
         text-transform: uppercase
         padding: 1rem 2.94rem
