--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -12,7 +12,7 @@
         align-items: center
     &__name
         text-transform: uppercase
-        font-size: 21px
+        font-size: 1.714rem
         font-weight: 700
         line-height: 28.8px
         margin-left: 0.857rem
@@ -40,7 +40,7 @@
 .phone
     color: $grey
     text-decoration: none
-    font-size: 24px
+    font-size: 1.714rem
     font-weight: 300
     line-height: 31px
 .contacts
