--- a/sass/templates/_reason.sass
+++ b/sass/templates/_reason.sass
@@ -2,6 +2,49 @@
     padding-top: 5rem
     margin: 0
     padding-bottom: 16.3rem
+    &__reasonss
+        display: flex
+        // align-items: flex-end
+        flex-wrap: wrap
+        margin: 0
+        padding: 0
+        // max-height: 249px
+        justify-content: space-between
+    &__why
+        font-family: "Myriad Pro Regular"
+        font-size: 39.5px
+        font-weight: 400
+        width: 294px
+        height: 72px
+        background-color: #ffffff
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-bottom: 11.9rem
+        margin-top: -24rem
+    &__p
+        padding: 0
+        margin: 0
+    &__nine
+        font-size: 342px
+        font-weight: 400
+        font-family: 'Roboto Thin'
+        margin-left: 1rem
+        padding: 0
+        margin: 0
+        // max-height: 249px
+        letter-spacing: -17.1px   
+        line-height: 80.91px
+        color: #0f1c2e
+    &__percent
+        font-weight: 400
+        font-size: 112px
+        font-family: 'Roboto Thin'
+        color: #06bee1
+        margin: 0
+        padding: 0
+        margin-left: 2.15rem
+        margin-right: 12rem
     &__h3
         color: #0f1c2e
         font-size: 24.2px
@@ -9,7 +52,7 @@
         line-height: 28.8px
         margin: 0
     &__text
-        colol:#061826
+        color:#061826
         font-size: 15.7px
         font-weight: 300
         line-height: 24px
