--- a/sass/templates/_results.sass
+++ b/sass/templates/_results.sass
@@ -18,7 +18,7 @@
         font-size: 40px
         letter-spacing: 0.73px
     &__text
-        olor: #061826
+        color: #061826
         font-size: 16px
         font-weight: 300
         line-height: 24px
