--- a/sass/templates/_sform.sass
+++ b/sass/templates/_sform.sass
@@ -1,6 +1,6 @@
 .sform
     padding-top: 8.5rem
-    background: url('../img/sform-bg.jpg') no-repeat center
+    background: url('../img/sform-bg.jpg') no-repeat center / cover
     padding-bottom: 8.5rem
     &__h2
         text-align: center
@@ -23,36 +23,33 @@
     &__name
         border-radius: 4px
         background-color: #ffffff
-        padding: 1.1rem 0
+        padding: 1.1rem 1rem
         margin-bottom: 1.5rem
         &::placeholder
             color: #0f1c2e
             font-size: 19px
             font-weight: 300
             line-height: 22.94px
-            padding-left: 1rem
     &__number
         border-radius: 4px
         background-color: #ffffff
-        padding: 1.1rem 0
+        padding: 1.1rem 1rem
         margin-bottom: 1.5rem
         &::placeholder
             color: #0f1c2e
             font-size: 19px
             font-weight: 300
             line-height: 22.94px
-            padding-left: 1rem
     &__email
         border-radius: 4px
         background-color: #ffffff
-        padding: 1.1rem 0
+        padding: 1.1rem 1rem
         margin-bottom: 1.5rem
         &::placeholder
             color: #0f1c2e
             font-size: 19px
             font-weight: 300
             line-height: 22.94px
-            padding-left: 1rem
     &__button
         box-shadow: 0 12px 24px rgba(6, 57, 158, 0.32)
         border-radius: 4px
