--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,7 @@
 @import 'interface'
 @import 'grid'  
 @import 'settings'
+
 @import 'templates/header'
 @import 'templates/hero'
 @import 'templates/reason'
@@ -21,6 +22,9 @@
 @import 'templates/results'
 @import 'templates/return'
 @import 'templates/questions'
-@import 'templates/_footer'
+@import 'templates/footer'
+@import 'templates/modal'
+@import 'media'
+
 
 
