--- a/sass/templates/_format.sass
+++ b/sass/templates/_format.sass
@@ -11,9 +11,9 @@
         text-align: center
         margin-bottom: 4.5rem
     &__col1
-        background: url('../img/format-left.png') no-repeat
+        background: url('../img/format-left.jpg') no-repeat 
     &__col-two
-        background: url('../img/format-right.png') no-repeat
+        background: url('../img/format-right.png') no-repeat right
     &__col
         flex-basis: 49%
     &__h3
