--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -3,25 +3,25 @@
     background: url('../img/hero.jpg') no-repeat center / cover
     padding-bottom: 38rem
     &__title
-        font-size: 71px
+        font-size: 5,07rem
         font-weight: 100
-        line-height: 83.61px
+        line-height: 5.972rem
         color: $darkLight
         margin: 0
     &__content
         margin-left: 4px
     &__text1
         font-family: "Myriad Pro Regular"
-        font-size: 38px
+        font-size: 2.71rem
         font-weight: 400
         margin: 0
         padding: 0
         margin-bottom: 1.6rem
     &__text2
         color: #061826
-        font-size: 15.8px
+        font-size: 1.12rem
         font-weight: 300
-        line-height: 23.97px
+        line-height: 1.7rem
         margin: 0
         padding: 0
         margin-bottom: 3.8rem
@@ -36,7 +36,7 @@
         color: #ffffff
         font-size: 1.22rem
         font-weight: 700
-        padding: 14.5px 40px
+        padding: 1.035rem 2.857rem
     &__button-more
         border-radius: 4px
         border: 1px solid #0842b7
@@ -44,39 +44,34 @@
         color: #0842b7
         font-size: 1.14rem
         font-weight: 700
-        padding: 14.5px 39px
+        padding: 1.035rem 2.85rem
         margin-top: 0.74rem
     &__thirty-days--text
         color: #0f1c2e
-        font-size: 24px
+        font-size: 1.71rem
         font-weight: 300
-        line-height: 28.76px
+        line-height: 2.07rem
         margin-left: 3.6rem
     &__why
         font-family: "Myriad Pro Regular"
-        font-size: 39.5px
+        font-size: 2.821rem
         font-weight: 400
-        width: 294px
-        height: 72px
+        width: 21rem
+        height: 5.14rem
         background-color: #ffffff
         display: flex
         align-items: center
         justify-content: center
         margin-bottom: 11.9rem
         margin-top: -19rem
-    &__reasons
-        display: flex
-        align-items: flex-end
-        flex-wrap: wrap
-        margin: 0
-        padding: 0
-        // align-items: flex-start
+   
     &__95
         font-size: 342px
         font-weight: 400
         font-family: 'Roboto Thin'
         margin-left: -1rem
         padding: 0
+        margin: 0
         max-height: 249px
         letter-spacing: -17.1px    
         line-height: 80.91px
