--- a/sass/templates/_lesson.sass
+++ b/sass/templates/_lesson.sass
@@ -1,5 +1,5 @@
 .lesson
-    background: url('../img/lesson-bg.jpg') no-repeat center
+    background: url('../img/lesson-bg.jpg') no-repeat center / cover
     padding-top: 5.8rem
     padding-bottom: 8.5rem
     margin-top: 0
