--- a/sass/templates/_process.sass
+++ b/sass/templates/_process.sass
@@ -1,7 +1,7 @@
 .process
     padding-top: 5rem
     padding-bottom: 8rem
-    background: url('../img/bgprocess.jpg') no-repeat center bottom
+    background: url('../img/bgprocess.jpg') no-repeat center bottom / cover
     &__h2
         color: #000000
         font-family: "Myriad Pro Regular"
