--- a/sass/templates/_return.sass
+++ b/sass/templates/_return.sass
@@ -1,5 +1,5 @@
 .return
-    background: url('../img/return-bg.png') no-repeat center 
+    background: url('../img/return-bg.png') no-repeat center / cover
     padding-top: 8.5rem
     padding-bottom: 8.2rem
     &__text
