--- a/sass/templates/_start-studying.sass
+++ b/sass/templates/_start-studying.sass
@@ -1,12 +1,12 @@
 .start-studying
     //background-image: radial-gradient(circle 677px at center, #03256c 0%, #061826 100%)
-    background: url('../img/bg-start.jpg') no-repeat center
+    background: url('../img/bg-start.jpg') no-repeat center / cover
     padding-top: 9.07rem
     padding-bottom: 6.8rem
     margin: 0
     &__text
         color: #ffffff
-        font-size: 24px
+        font-size: 1.71rem
         font-weight: 700
         text-align: center
         margin-bottom: 2.6rem
@@ -17,7 +17,7 @@
         display: flex
         margin: auto
         color: #ffffff
-        font-size: 17px
+        font-size: 1.214rem
         font-weight: 700
         text-transform: uppercase
         border-radius: 4px
